--- a/themes/hermit/layouts/_default/list.html
+++ b/themes/hermit/layouts/_default/list.html
@@ -10,14 +10,13 @@
 			{{ .Content }}
 		</div>
 		{{- end }}
-		{{- range .Data.Pages.GroupByDate "2006" }}
+		{{- range .Data.Pages.GroupBy "Title" }}
 		<div class="posts-group">
 			<ul class="posts-list">
 				{{- range .Pages }}
 				<li class="post-item">
 					<a href="{{.Permalink}}">
 						<span class="post-title">{{.Title}}</span>
-						<span class="post-day">{{ .Date.Format .Site.Params.dateformShort }}</span>
 					</a>
 				</li>
 				{{- end }}
